package ec.edu.unl.lojavents.user.domain;

public enum EstadoVerificacionPropietario {
    NO_SOLICITADA,
    PENDIENTE,
    APROBADA,
    RECHAZADA
}
