package ec.edu.unl.lojavents.user.domain;

public enum Rol {
    CLIENTE,
    PROPIETARIO,
    ADMINISTRADOR
}
