@startuml
title LojaVents - Modelo de dominio vigente

top to bottom direction

skinparam backgroundColor white
skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam ArrowColor #475569
skinparam ClassBorderColor #475569
skinparam ClassFontColor #172033
skinparam ClassFontSize 11
skinparam ClassAttributeFontSize 10
skinparam ClassStereotypeFontSize 10
skinparam EnumBorderColor #64748B
skinparam EnumBackgroundColor #FFFFFF
skinparam EnumFontColor #172033
skinparam PackageBorderColor #64748B
skinparam PackageFontColor #172033
skinparam PackageFontStyle bold
skinparam nodesep 34
skinparam ranksep 42

hide circle

package "Usuarios y solicitudes" as Usuarios #EAF2F8 {
  class Usuario #F8FBFE {
    - id: UUID
    - nombres: String
    - email: String
    - passwordHash: String
    - telefono: String
    - creadoEn: OffsetDateTime
    --
    + actualizarPerfil(nombres: String, telefono: String): void
    + actualizarPasswordHash(passwordHash: String): void
    + cambiarEstado(estado: EstadoUsuario): void
    + actualizarVerificacionPropietario(estado: EstadoVerificacionPropietario): void
    + agregarRol(rol: Rol): void
  }

  class SolicitudPropietario #F8FBFE {
    - id: UUID
    - documentoReferencia: String
    - documentoArchivoId: String
    - documentoNombre: String
    - documentoTipo: String
    - documentoTamano: Long
    - notas: String
    - comentarioAdmin: String
    - creadoEn: OffsetDateTime
    - revisadoEn: OffsetDateTime
    --
    + aprobar(admin: Usuario, comentario: String): void
    + rechazar(admin: Usuario, comentario: String): void
  }

  class DocumentoIdentidad <<embeddable>> #F8FBFE {
    - numero: String
  }
}

package "Locales y disponibilidad" as Locales #EAF7EF {
  class LocalEvento #F7FCF9 {
    - id: UUID
    - nombre: String
    - descripcionCorta: String
    - descripcion: String
    - precioHora: BigDecimal
    - capacidad: int
    - calificacion: BigDecimal
    - totalResenas: int
    - destacado: boolean
    - politicaCancelacion: String
    - tiposEvento: Set<String>
    - amenidades: Set<String>
    - reglas: List<String>
    - imagenes: List<String>
    - creadoEn: OffsetDateTime
    - actualizadoEn: OffsetDateTime
    --
    + actualizar(...): void
    + desactivar(): void
    + solicitarRevision(): void
    + aprobarRevision(): void
    + configurarDestacado(destacado: boolean): void
    + configurarCalificacion(calificacion: BigDecimal, totalResenas: int): void
    + agregarBloqueo(bloqueo: BloqueDisponibilidad): void
    + eliminarBloqueo(bloqueoId: UUID): boolean
  }

  class DireccionLocal <<embeddable>> #F7FCF9 {
    - sector: String
    - direccion: String
  }

  class BloqueDisponibilidad #F7FCF9 {
    - id: UUID
    - fecha: LocalDate
    - horaInicio: LocalTime
    - horaFin: LocalTime
    - motivo: String
  }
}

package "Reservas y pagos" as ReservasPagos #FFF4E5 {
  class Reserva #FFFBF3 {
    - id: UUID
    - asistentes: int
    - motivoRechazo: String
    - reglasAceptadas: boolean
    - cancelacionAceptada: boolean
    - resenaEnviada: boolean
    - creadoEn: OffsetDateTime
    - actualizadoEn: OffsetDateTime
    - version: long
    --
    + aprobarPago(pago: PagoSimulado): void
    + rechazarPago(pago: PagoSimulado, motivo: String): void
    + marcarResenaEnviada(): void
  }

  class PeriodoReserva <<embeddable>> #FFFBF3 {
    - fecha: LocalDate
    - horaInicio: LocalTime
    - duracionHoras: int
    --
    + inicio(): LocalDateTime
    + fin(): LocalDateTime
    + seSolapaCon(otro: PeriodoReserva): boolean
  }

  class DatosFacturacion <<embeddable>> #FFFBF3 {
    - ciudad: String
    - sector: String
    - direccion: String
  }

  class ImporteReserva <<embeddable>> #FFFBF3 {
    - subtotal: BigDecimal
    - tarifaServicio: BigDecimal
    - total: BigDecimal
  }

  class ReferenciaPublicaReserva <<embeddable>> #FFFBF3 {
    - valor: String
    --
    + {static} generar(): ReferenciaPublicaReserva
    + {static} desde(valor: String): ReferenciaPublicaReserva
  }

  class PagoSimulado #FFFBF3 {
    - id: UUID
    - referencia: String
    - mensaje: String
    - procesadoEn: OffsetDateTime
  }
}

package "Interacción" as Interaccion #F4ECF7 {
  class Favorito #FBF8FC {
    - id: UUID
    - creadoEn: OffsetDateTime
  }

  class Resena #FBF8FC {
    - id: UUID
    - calificacion: int
    - comentario: String
    - creadoEn: OffsetDateTime
    - actualizadoEn: OffsetDateTime
  }
}

package "Enumeraciones" as Enumeraciones #F3F4F6 {
  enum Rol {
    CLIENTE
    PROPIETARIO
    ADMINISTRADOR
  }

  enum EstadoUsuario {
    ACTIVO
    SUSPENDIDO
    INACTIVO
  }

  enum EstadoVerificacionPropietario {
    NO_SOLICITADA
    PENDIENTE
    APROBADA
    RECHAZADA
  }

  enum EstadoSolicitudPropietario {
    PENDIENTE
    APROBADA
    RECHAZADA
  }

  enum TipoDocumentoIdentidad {
    CEDULA
    PASAPORTE
    LICENCIA_CONDUCIR
  }

  enum EstadoPublicacionLocal {
    PENDIENTE_REVISION
    PUBLICADO
    INACTIVO
  }

  enum EstadoReserva {
    EN_PROCESO
    CONFIRMADA
    RECHAZADA
    CANCELADA
  }

  enum EstadoPagoSimulado {
    APROBADO
    RECHAZADO
  }

  enum ModoPagoSimulado {
    APPROVE
    REJECT_FUNDS
    REJECT_PROVIDER
    REJECT_APPLICATION
  }
}

Usuario "1" -- "0..*" SolicitudPropietario : solicitante
Usuario "0..1" -- "0..*" SolicitudPropietario : revisor
SolicitudPropietario "1" *-- "1" DocumentoIdentidad

Usuario "1" -- "0..*" LocalEvento : propietario
LocalEvento "1" *-- "1" DireccionLocal
LocalEvento "1" *-- "0..*" BloqueDisponibilidad : bloqueos

Usuario "1" -- "0..*" Reserva : cliente
LocalEvento "1" -- "0..*" Reserva : local
Reserva "1" *-- "1" PeriodoReserva
Reserva "1" *-- "1" DatosFacturacion
Reserva "1" *-- "1" ImporteReserva
Reserva "1" *-- "1" ReferenciaPublicaReserva
Reserva "1" *-- "0..1" PagoSimulado : pago

Usuario "1" -- "0..*" Favorito : cliente
LocalEvento "1" -- "0..*" Favorito : local
Reserva "1" -- "0..1" Resena : resena
Usuario "1" -- "0..*" Resena : cliente
LocalEvento "1" -- "0..*" Resena : local

Usuario ..> Rol
Usuario ..> EstadoUsuario
Usuario ..> EstadoVerificacionPropietario
SolicitudPropietario ..> EstadoSolicitudPropietario
DocumentoIdentidad ..> TipoDocumentoIdentidad
LocalEvento ..> EstadoPublicacionLocal
Reserva ..> EstadoReserva
PagoSimulado ..> EstadoPagoSimulado
PagoSimulado ..> ModoPagoSimulado

Usuarios -[hidden]right- Locales
Locales -[hidden]right- ReservasPagos
Usuarios -[hidden]down- Interaccion
ReservasPagos -[hidden]down- Enumeraciones

@enduml
